tests/error/array.nx
fun main() = (
    var a = [0; 12];
    var value = a[0];
)
